--- a/File Upload App/.env
+++ b/File Upload App/.env
@@ -3,3 +3,7 @@ DB_URL = "mongodb+srv://cominforitnow:RIJhPuuIOkOVkAJt@cluster0.zg8fw.mongodb.ne
 CLOUD_NAME = "dxf2pmsou"
 API_KEY = "879512373568515"
 API_SECRET = "GP6rl8NUcJIq8Im5DBUJ3xG6iuw"
+
+MAIL_HOST = smtp.gmail.com
+MAIL_USER= your email address
+MAIL_PASS = pass key
