--- a/Auth App/.env
+++ b/Auth App/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-DB_URL = "mongodb+srv://cominforitnow:RIJhPuuIOkOVkAJt@cluster0.zg8fw.mongodb.net/Dummydb"
-JWT_Secret = popupipu
+DB_URL = "your db url"
+JWT_Secret = your secret key
