--- a/File Upload App/.env
+++ b/File Upload App/.env
@@ -1,8 +1,8 @@
 PORT = 3000 
-DB_URL = "mongodb+srv://cominforitnow:RIJhPuuIOkOVkAJt@cluster0.zg8fw.mongodb.net/FileUpload"
-CLOUD_NAME = "dxf2pmsou"
-API_KEY = "879512373568515"
-API_SECRET = "GP6rl8NUcJIq8Im5DBUJ3xG6iuw"
+DB_URL = "your db url"
+CLOUD_NAME = "cloudinary cloud name"
+API_KEY = "cloudinary api key"
+API_SECRET = "cloudinary api secret key"
 
 MAIL_HOST = smtp.gmail.com
 MAIL_USER= your email address
